Fix minor layout issues and add footer

--- a/src/styles/assets.scss
+++ b/src/styles/assets.scss
@@ -21,7 +21,7 @@
 
 	@media (max-width: 1920px) {
 		--intro-bg: url('assets/images/layout/intro-w1920.jpg');
-		--contact-bg: url('assets/images/layout/contact-1w920.jpg');
+		--contact-bg: url('assets/images/layout/contact-w920.jpg');
 		--cat-1-bg: url('assets/images/pictures/category-1-w1920.jpg');
 		--cat-2-bg: url('assets/images/pictures/category-2-w1920.jpg');
 		--cat-3-bg: url('assets/images/pictures/category-3-w1920.jpg');
