--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,13 +1,16 @@
 .vertical-paging {
 	width: 100vw;
-	min-height: 100%;
+	max-height: 100vh;
 	scroll-snap-type: y proximity;
 	overflow-y: auto;
 
-	> article {
+	article,
+	footer {
 		width: 100%;
-		min-height: 100vh;
 		scroll-snap-align: start;
+	}
+	article {
+		min-height: 100vh;
 		outline: none;
 	}
 }
@@ -15,15 +18,16 @@
 .intro {
 	--bg-image: var(--intro-bg);
 	display: grid;
-	grid-template-columns: 5vw 1fr 1fr 1fr 5vw;
+	grid-template-columns: 5vw 0 1fr 1fr 1fr 0 5vw;
 	grid-template-rows: 1fr repeat(2, auto) 1fr auto 2vh;
 
 	@media (orientation: portrait) {
+		grid-template-columns: 5vw 1fr auto 0 0 1fr 5vw;
 		grid-template-rows: 1fr repeat(4, auto) 2vh;
 	}
 
 	> .intro-l1 {
-		grid-column: 2;
+		grid-column: 3;
 		grid-row: 2;
 		font-size: 2.5rem;
 		font-weight: 300;
@@ -31,12 +35,12 @@
 		text-transform: uppercase;
 	}
 	> .intro-l2 {
-		grid-column: 2;
+		grid-column: 3;
 		grid-row: 3;
 		font-style: italic;
 	}
 	> .logo {
-		grid-column: 2;
+		grid-column: 3;
 		grid-row: 5;
 		fill: var(--primary-color);
 	}
@@ -172,7 +176,31 @@
 	}
 }
 
-.social {
-	// TODO: design missing, hide for now
-	display: none;
+.footer {
+	display: grid;
+	grid-template-columns: 5vw 1fr auto 1fr 5vw;
+	grid-template-rows: 5vh auto auto 5vh;
+
+	> .copyright {
+		grid-row: 2;
+		grid-column: 3;
+		font-weight: 300;
+	}
+	> .social {
+		grid-row: 2;
+		grid-column: 4;
+		justify-self: end;
+
+		> a {
+			text-decoration: none;
+
+			> svg {
+				width: 2.5rem;
+				height: 2.5rem;
+			}
+			+ a {
+				margin-left: 0.5rem;
+			}
+		}
+	}
 }
